Apply some programmatic good practices
Apply programmatic good practices relative to field modifier, Integer instantiation, and so on...

cosmetic code source format update